convert_same/gen/scratchParser.py
# Generated from /home/giacomo/projects/loggen/convert_same/scratch.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class scratchParser ( Parser ):

    grammarFileName = "scratch.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'sigma'", "'['", "']'", "'event'", "'{'", 
                     "'}'", "'nglobal'", "':'", "'sglobal'", "'('", "','", 
                     "')'", "'where'", "'.'", "'template'", "'#'", "'true'", 
                     "'var'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "OP", "LABEL", 
                      "INTNUMBER", "NUMBER", "STRING", "SPACE", "COMMENT", 
                      "LINE_COMMENT" ]

    RULE_lang = 0
    RULE_gen = 1
    RULE_sigma = 2
    RULE_event = 3
    RULE_global = 4
    RULE_sglobal = 5
    RULE_declare = 6
    RULE_declarative = 7
    RULE_cond = 8
    RULE_field = 9
    RULE_var = 10

    ruleNames =  [ "lang", "gen", "sigma", "event", "global", "sglobal", 
                   "declare", "declarative", "cond", "field", "var" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    OP=19
    LABEL=20
    INTNUMBER=21
    NUMBER=22
    STRING=23
    SPACE=24
    COMMENT=25
    LINE_COMMENT=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class LangContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sigma(self):
            return self.getTypedRuleContext(scratchParser.SigmaContext,0)


        def global_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scratchParser.GlobalContext)
            else:
                return self.getTypedRuleContext(scratchParser.GlobalContext,i)


        def sglobal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scratchParser.SglobalContext)
            else:
                return self.getTypedRuleContext(scratchParser.SglobalContext,i)


        def declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scratchParser.DeclareContext)
            else:
                return self.getTypedRuleContext(scratchParser.DeclareContext,i)


        def getRuleIndex(self):
            return scratchParser.RULE_lang

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLang" ):
                listener.enterLang(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLang" ):
                listener.exitLang(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLang" ):
                return visitor.visitLang(self)
            else:
                return visitor.visitChildren(self)




    def lang(self):

        localctx = scratchParser.LangContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_lang)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.sigma()
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7 or _la==9:
                self.state = 25
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [7]:
                    self.state = 23
                    self.global_()
                    pass
                elif token in [9]:
                    self.state = 24
                    self.sglobal()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 31 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.declare()
                self.state = 33 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==23):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scratchParser.GlobalContext)
            else:
                return self.getTypedRuleContext(scratchParser.GlobalContext,i)


        def sglobal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scratchParser.SglobalContext)
            else:
                return self.getTypedRuleContext(scratchParser.SglobalContext,i)


        def event(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scratchParser.EventContext)
            else:
                return self.getTypedRuleContext(scratchParser.EventContext,i)


        def declarative(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scratchParser.DeclarativeContext)
            else:
                return self.getTypedRuleContext(scratchParser.DeclarativeContext,i)


        def getRuleIndex(self):
            return scratchParser.RULE_gen

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGen" ):
                listener.enterGen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGen" ):
                listener.exitGen(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGen" ):
                return visitor.visitGen(self)
            else:
                return visitor.visitChildren(self)




    def gen(self):

        localctx = scratchParser.GenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_gen)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7 or _la==9:
                self.state = 37
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [7]:
                    self.state = 35
                    self.global_()
                    pass
                elif token in [9]:
                    self.state = 36
                    self.sglobal()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 42
                self.event()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 48
                self.declarative()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SigmaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(scratchParser.STRING)
            else:
                return self.getToken(scratchParser.STRING, i)

        def getRuleIndex(self):
            return scratchParser.RULE_sigma

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSigma" ):
                listener.enterSigma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSigma" ):
                listener.exitSigma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSigma" ):
                return visitor.visitSigma(self)
            else:
                return visitor.visitChildren(self)




    def sigma(self):

        localctx = scratchParser.SigmaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sigma)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(scratchParser.T__0)
            self.state = 55
            self.match(scratchParser.T__1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 56
                self.match(scratchParser.STRING)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(scratchParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(scratchParser.STRING, 0)

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scratchParser.VarContext)
            else:
                return self.getTypedRuleContext(scratchParser.VarContext,i)


        def getRuleIndex(self):
            return scratchParser.RULE_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvent" ):
                listener.enterEvent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvent" ):
                listener.exitEvent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEvent" ):
                return visitor.visitEvent(self)
            else:
                return visitor.visitChildren(self)




    def event(self):

        localctx = scratchParser.EventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_event)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(scratchParser.T__3)
            self.state = 65
            self.match(scratchParser.STRING)
            self.state = 66
            self.match(scratchParser.T__4)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 67
                self.var()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self.match(scratchParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.low = None # Token
            self.high = None # Token

        def var(self):
            return self.getTypedRuleContext(scratchParser.VarContext,0)


        def INTNUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(scratchParser.INTNUMBER)
            else:
                return self.getToken(scratchParser.INTNUMBER, i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(scratchParser.NUMBER)
            else:
                return self.getToken(scratchParser.NUMBER, i)

        def getRuleIndex(self):
            return scratchParser.RULE_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal" ):
                listener.enterGlobal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal" ):
                listener.exitGlobal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal" ):
                return visitor.visitGlobal(self)
            else:
                return visitor.visitChildren(self)




    def global_(self):

        localctx = scratchParser.GlobalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_global)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(scratchParser.T__6)
            self.state = 76
            self.var()
            self.state = 77
            self.match(scratchParser.T__1)
            self.state = 78
            localctx.low = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==21 or _la==22):
                localctx.low = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 79
            self.match(scratchParser.T__7)
            self.state = 80
            localctx.high = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==21 or _la==22):
                localctx.high = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 81
            self.match(scratchParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SglobalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(scratchParser.VarContext,0)


        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(scratchParser.STRING)
            else:
                return self.getToken(scratchParser.STRING, i)

        def getRuleIndex(self):
            return scratchParser.RULE_sglobal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSglobal" ):
                listener.enterSglobal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSglobal" ):
                listener.exitSglobal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSglobal" ):
                return visitor.visitSglobal(self)
            else:
                return visitor.visitChildren(self)




    def sglobal(self):

        localctx = scratchParser.SglobalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sglobal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(scratchParser.T__8)
            self.state = 84
            self.var()
            self.state = 85
            self.match(scratchParser.T__1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 86
                self.match(scratchParser.STRING)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(scratchParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.labelLHS = None # Token
            self.vLHS = None # VarContext
            self.op = None # Token
            self.labelRHS = None # Token
            self.vRHS = None # VarContext

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(scratchParser.STRING)
            else:
                return self.getToken(scratchParser.STRING, i)

        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scratchParser.FieldContext)
            else:
                return self.getTypedRuleContext(scratchParser.FieldContext,i)


        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scratchParser.VarContext)
            else:
                return self.getTypedRuleContext(scratchParser.VarContext,i)


        def OP(self):
            return self.getToken(scratchParser.OP, 0)

        def getRuleIndex(self):
            return scratchParser.RULE_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclare" ):
                listener.enterDeclare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclare" ):
                listener.exitDeclare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare" ):
                return visitor.visitDeclare(self)
            else:
                return visitor.visitChildren(self)




    def declare(self):

        localctx = scratchParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(scratchParser.STRING)
            self.state = 95
            self.match(scratchParser.T__9)
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 96
                    self.field()
                    self.state = 97
                    self.match(scratchParser.T__10) 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 104
            self.field()
            self.state = 105
            self.match(scratchParser.T__11)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 106
                self.match(scratchParser.T__12)
                self.state = 107
                localctx.labelLHS = self.match(scratchParser.STRING)
                self.state = 108
                self.match(scratchParser.T__13)
                self.state = 109
                localctx.vLHS = self.var()
                self.state = 110
                localctx.op = self.match(scratchParser.OP)
                self.state = 111
                localctx.labelRHS = self.match(scratchParser.STRING)
                self.state = 112
                self.match(scratchParser.T__13)
                self.state = 113
                localctx.vRHS = self.var()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarativeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(scratchParser.STRING, 0)

        def INTNUMBER(self):
            return self.getToken(scratchParser.INTNUMBER, 0)

        def getRuleIndex(self):
            return scratchParser.RULE_declarative

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarative" ):
                listener.enterDeclarative(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarative" ):
                listener.exitDeclarative(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarative" ):
                return visitor.visitDeclarative(self)
            else:
                return visitor.visitChildren(self)




    def declarative(self):

        localctx = scratchParser.DeclarativeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declarative)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(scratchParser.T__14)
            self.state = 118
            self.match(scratchParser.STRING)
            self.state = 119
            self.match(scratchParser.T__15)
            self.state = 120
            self.match(scratchParser.INTNUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return scratchParser.RULE_cond

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ActualcondContext(CondContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a scratchParser.CondContext
            super().__init__(parser)
            self.label = None # Token
            self.v = None # VarContext
            self.op = None # Token
            self.val = None # Token
            self.copyFrom(ctx)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(scratchParser.STRING)
            else:
                return self.getToken(scratchParser.STRING, i)
        def var(self):
            return self.getTypedRuleContext(scratchParser.VarContext,0)

        def OP(self):
            return self.getToken(scratchParser.OP, 0)
        def INTNUMBER(self):
            return self.getToken(scratchParser.INTNUMBER, 0)
        def NUMBER(self):
            return self.getToken(scratchParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActualcond" ):
                listener.enterActualcond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActualcond" ):
                listener.exitActualcond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActualcond" ):
                return visitor.visitActualcond(self)
            else:
                return visitor.visitChildren(self)


    class TrueContext(CondContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a scratchParser.CondContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrue" ):
                listener.enterTrue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrue" ):
                listener.exitTrue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrue" ):
                return visitor.visitTrue(self)
            else:
                return visitor.visitChildren(self)



    def cond(self):

        localctx = scratchParser.CondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cond)
        self._la = 0 # Token type
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                localctx = scratchParser.ActualcondContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                localctx.label = self.match(scratchParser.STRING)
                self.state = 123
                self.match(scratchParser.T__13)
                self.state = 124
                localctx.v = self.var()
                self.state = 125
                localctx.op = self.match(scratchParser.OP)
                self.state = 126
                localctx.val = self._input.LT(1)
                _la = self._input.LA(1)
                if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 14680064) != 0):
                    localctx.val = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [17]:
                localctx = scratchParser.TrueContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(scratchParser.T__16)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(scratchParser.STRING, 0)

        def cond(self):
            return self.getTypedRuleContext(scratchParser.CondContext,0)


        def getRuleIndex(self):
            return scratchParser.RULE_field

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField" ):
                listener.enterField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField" ):
                listener.exitField(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField" ):
                return visitor.visitField(self)
            else:
                return visitor.visitChildren(self)




    def field(self):

        localctx = scratchParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(scratchParser.STRING)
            self.state = 132
            self.match(scratchParser.T__10)
            self.state = 133
            self.cond()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(scratchParser.STRING, 0)

        def getRuleIndex(self):
            return scratchParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = scratchParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(scratchParser.T__17)
            self.state = 136
            self.match(scratchParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





